# flask_projeto

./: README.md  docker-compose.yml  pyproject.toml
primeiro_projeto/: config.py  forms.py  main.py  models.py  views.py  views_ativos.py  views_user.py
primeiro_projeto/static/: app.css
primeiro_projeto/templates/: index.html
primeiro_projeto/templates/projeto/: ativos.html  cadastrar.html  cadastro_usuario.html  editar_ativo.html  login.html  style.css
