[tool.poetry]
name = "primeiro-projeto"
version = "0.1.0"
description = ""
authors = ["jlennomatias <john.x12@hotmail.com>"]
readme = "README.md"
packages = [{include = "primeiro_projeto"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
psycopg2-binary = "^2.9.6"
flask-wtf = "^1.1.1"
flask-bcrypt = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
